welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var nbBaggel=0
do {
  while (!corridor) {
    avance;
    if (estSurBiscuit) nbBaggel+=1
  }
  if (nbBaggel <=2) droite;
  else gauche;  
  nbBaggel=0
} while (!sortieTrouvee)
avance;